--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,20 @@
+name = "HydroDaemonDemo"
+uuid = "3c923975-32fb-4abc-adda-9b9f4e6ca789"
+authors = ["Huite <huite.bootsma@gmail.com>"]
+version = "0.1.0"
+
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
+[compat]
+BenchmarkTools = "1.6.0"
+ForwardDiff = "0.10.38"
+LinearAlgebra = "1.11.0"
