--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,8 @@ version = "0.1.0"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
+DASKR = "165a45c3-f624-5814-8e85-3bdf39a7becd"
+DASSL = "e993076c-0cfd-5d6b-a1ac-36489fdf7917"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
@@ -17,12 +19,16 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
+Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 
 [compat]
 BenchmarkTools = "1.6.0"
+DASKR = "2.9.1"
+DASSL = "2.6.1"
 Dates = "1.11.0"
 DifferentiationInterface = "0.6.43"
 ForwardDiff = "0.10.38"
 LineSearches = "7.3.0"
 LinearAlgebra = "1.11.0"
 SparseConnectivityTracer = "0.6.15"
+Sundials = "4.27.0"
