--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PreallocationTools = "d236fae5-4411-538c-8e31-a6e3d9e00b46"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
 Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
@@ -30,5 +31,6 @@ DifferentiationInterface = "0.6.43"
 ForwardDiff = "0.10.38"
 LineSearches = "7.3.0"
 LinearAlgebra = "1.11.0"
+PreallocationTools = "0.4.27"
 SparseConnectivityTracer = "0.6.15"
 Sundials = "4.27.0"
