--- a/Project.toml
+++ b/Project.toml
@@ -16,9 +16,11 @@ DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PreallocationTools = "d236fae5-4411-538c-8e31-a6e3d9e00b46"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
 Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 
@@ -31,6 +33,8 @@ DifferentiationInterface = "0.6.43"
 ForwardDiff = "0.10.38"
 LineSearches = "7.3.0"
 LinearAlgebra = "1.11.0"
+LinearSolve = "3.18.2"
 PreallocationTools = "0.4.27"
+SparseArrays = "1.11.0"
 SparseConnectivityTracer = "0.6.15"
 Sundials = "4.27.0"
