WIP: Newton runs with modified Mualem-vanGenuchten; DiffEq doesn't?

--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
 DASKR = "165a45c3-f624-5814-8e85-3bdf39a7becd"
 DASSL = "e993076c-0cfd-5d6b-a1ac-36489fdf7917"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
@@ -28,6 +29,7 @@ Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 BenchmarkTools = "1.6.0"
 DASKR = "2.9.1"
 DASSL = "2.6.1"
+DataInterpolations = "8.3.1"
 Dates = "1.11.0"
 DifferentiationInterface = "0.6.43"
 ForwardDiff = "0.10.38"
@@ -36,5 +38,5 @@ LinearAlgebra = "1.11.0"
 LinearSolve = "3.18.2"
 PreallocationTools = "0.4.27"
 SparseArrays = "1.11.0"
-SparseConnectivityTracer = "0.6.15"
+SparseConnectivityTracer = "1.0.0"
 Sundials = "4.27.0"
