--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
+OrdinaryDiffEqCore = "bbf590c4-e513-4bbe-9b18-05decba2e5d8"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PreallocationTools = "d236fae5-4411-538c-8e31-a6e3d9e00b46"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
@@ -36,6 +37,7 @@ ForwardDiff = "0.10.38"
 LineSearches = "7.3.0"
 LinearAlgebra = "1.11.0"
 LinearSolve = "3.18.2"
+OrdinaryDiffEqCore = "1.26.2"
 PreallocationTools = "0.4.27"
 SparseArrays = "1.11.0"
 SparseConnectivityTracer = "1.0.0"
