--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+LineSearch = "87fe0de2-c867-4266-b59a-2f0a94fc965b"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
@@ -28,6 +29,7 @@ DASKR = "2.9.1"
 DASSL = "2.6.1"
 DataInterpolations = "8.3.1"
 Dates = "1.11.0"
+LineSearch = "0.1.4"
 LineSearches = "7.3.0"
 LinearAlgebra = "1.11.0"
 LinearSolve = "3.18.2"
