--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 LineSearch = "87fe0de2-c867-4266-b59a-2f0a94fc965b"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -21,6 +22,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SparseConnectivityTracer = "9f842d2f-2579-4b1d-911e-f412cf18a3f5"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Sundials = "c3572dad-4567-51f8-b174-8c6c989267f4"
 
 [compat]
@@ -29,6 +31,7 @@ DASKR = "2.9.1"
 DASSL = "2.6.1"
 DataInterpolations = "8.3.1"
 Dates = "1.11.0"
+Glob = "1.3.1"
 LineSearch = "0.1.4"
 LineSearches = "7.3.0"
 LinearAlgebra = "1.11.0"
@@ -36,4 +39,5 @@ LinearSolve = "3.18.2"
 OrdinaryDiffEqCore = "1.26.2"
 SparseArrays = "1.11.0"
 SparseConnectivityTracer = "1.0.0"
+Statistics = "1.11.1"
 Sundials = "4.27.0"
