--- a/Project.toml
+++ b/Project.toml
@@ -12,11 +12,13 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 LineSearch = "87fe0de2-c867-4266-b59a-2f0a94fc965b"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
+NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 OrdinaryDiffEqCore = "bbf590c4-e513-4bbe-9b18-05decba2e5d8"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
@@ -31,11 +33,13 @@ DASKR = "2.9.1"
 DASSL = "2.6.1"
 DataInterpolations = "8.3.1"
 Dates = "1.11.0"
+Distributions = "0.25.120"
 Glob = "1.3.1"
 LineSearch = "0.1.4"
 LineSearches = "7.3.0"
 LinearAlgebra = "1.11.0"
 LinearSolve = "3.18.2"
+NCDatasets = "0.14.8"
 OrdinaryDiffEqCore = "1.26.2"
 SparseArrays = "1.11.0"
 SparseConnectivityTracer = "1.0.0"
